@@ -339,17 +339,17 @@ Could be worth adding to the API.
 - (void)_drawHeaderAndFooter;
 @end
 
-#if !BUILDING_ON_TIGER
 @interface WebView (WebViewGrammarChecking)
 
 // FIXME: These two methods should be merged into WebViewEditing when we're not in API freeze
 - (BOOL)isGrammarCheckingEnabled;
+#if !BUILDING_ON_TIGER
 - (void)setGrammarCheckingEnabled:(BOOL)flag;
 
 // FIXME: This method should be merged into WebIBActions when we're not in API freeze
 - (void)toggleGrammarChecking:(id)sender;
-@end
 #endif
+@end
 
 @interface WebView (WebViewEditingInMail)
 - (void)_insertNewlineInQuotedContent;
