@@ -1,3 +1,12 @@
+2006-12-05  John Sullivan  <sullivan@apple.com>
+
+        build fix
+
+        * WebView/WebViewPrivate.h:
+        * WebView/WebView.mm:
+        (-[WebView isGrammarCheckingEnabled]):
+        define isGrammarCheckingEnabled whether on Tiger or not (just return NO on Tiger)
+
 2006-12-04  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Darin
